test/extension_test_cases/valid/pointers/pointercreation.wacc
# pointers

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  int num = 1 ;
  int *numPtr = &num ;

  exit 0
end
