test/extension_test_cases/invalid/pointers/dereferencenonpointer.wacc
# pointers

# Output:
# #empty#

# Exit:
# 200

# Program:

begin
  int num = 178 ;

  println *num ;

  exit 0
end
